# bevy_text_mode

./: .gitignore  Cargo.toml  readme.md
examples/: sprite_atlas.rs
src/: computed_text_mode_slices.rs  lib.rs  plugin.rs  text_mode_sprite.wgsl  text_mode_texture_atlas.rs
