[package]
name = "bevy_text_mode"
description = "Bevy plugin adding a texture atlas sprite with configurable background and foreground colors."
version = "0.1.0"
edition = "2021"
authors = ["yopox yopoxdev@gmail.com"]
homepage = "https://github.com/yopox/bevy_text_mode"
repository = "https://github.com/yopox/bevy_text_mode"
license = "Apache-2.0"
keywords = ["bevy", "2d", "graphics", "textmode", "palette"]
readme = "readme.md"
exclude = ["assets/", "examples/"]

[dependencies]
bevy = "0.10.0"

bitflags = "1.3.2"
bytemuck = "1.7"
fixedbitset = "0.4.2"