[dependencies.bevy]
version = "0.11"

[dependencies.bitflags]
version = "2.3.3"

[dependencies.bytemuck]
version = "1.7"

[dependencies.fixedbitset]
version = "0.4.2"

[package]
authors = ["yopox yopoxdev@gmail.com"]
description = "Bevy plugin adding a texture atlas sprite with configurable background and foreground colors."
edition = "2021"
exclude = ["assets/", "examples/"]
homepage = "https://github.com/yopox/bevy_text_mode"
keywords = ["bevy", "2d", "graphics", "textmode", "palette"]
license = "Apache-2.0"
name = "bevy_text_mode"
readme = "readme.md"
repository = "https://github.com/yopox/bevy_text_mode"
version = "0.2.0"
