[dependencies.bevy]
version = "0.14"

[dependencies.bitflags]
version = "2.3"

[dependencies.bytemuck]
version = "1.5"
features = ["derive"]

[dependencies.fixedbitset]
version = "0.4"

[dependencies.bevy_sprite]
version = "0.14"

[package]
authors = ["yopox yopoxdev@gmail.com"]
description = "Bevy plugin adding a texture atlas sprite with configurable background and foreground colors."
edition = "2021"
exclude = ["assets/", "examples/"]
homepage = "https://github.com/yopox/bevy_text_mode"
keywords = ["bevy", "graphics", "textmode", "palette"]
license = "Apache-2.0"
name = "bevy_text_mode"
readme = "readme.md"
repository = "https://github.com/yopox/bevy_text_mode"
version = "0.4.0"